test_scores/negative_dimers/features/O43236.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O43236.pkl.xz